--- a/force-app/main/default/lwc/hello/hello.html
+++ b/force-app/main/default/lwc/hello/hello.html
@@ -1,4 +1,4 @@
-<template>
+<!-- <template>
     <lightning-card title="Hello" icon-name="custom:custom14">
         <div class="slds-var-m-around_medium">Hello, {greeting}!</div>
 
@@ -6,4 +6,15 @@
             Bind an HTML element to a component property.
         </c-view-source>
     </lightning-card>
+</template> -->
+
+<template>
+    <div>
+        <div>Name: {name}</div>
+        <div>Description: {description}</div>
+        <div>Category: {category}</div>
+        <div>Material: {material}</div>
+        <div>Price: {price}</div>
+        <div><img src={pictureUrl}/></div>
+    </div>
 </template>
